# comp-club-YADRO

./: .gitignore  CMakeLists.txt  README.md
include/: ComputerClub.h
src/: ComputerClub.cpp  main.cpp
